[package]
name = "dbcapi"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
build = "build.rs"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
sockcan_data = {path="../sockcan-data"}
lib_sockcan= {path= "../../canbus-core-rs/sockcan"}
afbv4= {path= "../../afb-librust/afb-librs"}

[lib]
name = "dbcapi"
crate-type = ["lib"]
path = "src/lib.rs"
