[package]
name = "dbcapi"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
build = "build.rs"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
sockcan_data = {path="../sockcan-data"}
lib_sockcan= { git = "https://github.com/redpesk-common/canbus-core-rs.git", branch = "master" }
afbv4 = { git = "https://github.com/redpesk-common/afb-librust", branch = "master" }

[lib]
name = "dbcapi"
crate-type = ["lib"]
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dbcapi_logic"
harness = false
