[package]
name = "sockcan_binding"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
build = "build.rs"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lib_sockdata = {path="../sockcan-data"}
lib_sockcan= {path= "../../canbus-core-rs/sockcan"}
afbv4 = {path= "../../afb-librust/afb-librs"}

[lib]
# optional test use:  clear && cargo build --example afb_test
name = "afb_sockcan"
crate-type = ["cdylib"]
path = "src/lib.rs"
