[package]
name = "sockcan_binding"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
build = "build.rs"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sockcan_data = {path="../sockcan-data"}
lib_sockcan= {path= "../../canbus-core-rs/sockcan"}
afbv4 = {path= "../../afb-librust/afb-librs"}

[lib]
# optional test use:  clear && cargo build --example afb_test
name = "afb_sockcan"
# Add "rlib" for bench
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sockcan_binding_micro"
harness = false
