[package]
name = "lib_sockdata"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lib_sockcan= {path= "../../canbus-rs/sockcan"}
afbv4= {path= "../../afb-librust/afb-librs"}

[lib]
name = "sockdata"
crate-type = ["lib"]
path = "src/sockdata-lib.rs"
