[package]
name = "sockcan_data"
authors = ["fulup@iot.bzh"]
version = "0.1.0"
edition = "2021"
build = "build.rs"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lib_sockcan= { git = "https://github.com/redpesk-common/canbus-core-rs.git", branch = "master" }
afbv4 = { git = "https://github.com/redpesk-common/afb-librust", branch = "master" }

[lib]
name = "sockdata"
crate-type = ["lib"]
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sockdata_types"
harness = false
