[package]
name = "can-model3"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"], optional = true  }
serde_json = {version= "1", optional = true }
bitvec = { version = "1.0", default-features = false }
bitflags = { version = "2"}
lib_sockdata= {path ="../../sockcan-data"}
lib_dbcapi= {path ="../../dbcapi-lib"}
lib_sockcan= {path= "../../../canbus-core-rs/sockcan"}
afbv4= {path= "../../../afb-librust/afb-librs"}

[build-dependencies]
dbcparser= {path= "../../../canforge-rs/dbcparser"}

[lib]
name = "afb_model3"
crate-type = ["cdylib"]
path = "src/model3-binding.rs"

[features]
default = ["serde","serde_json"]
