[package]
name = "can-model3"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"], optional = true  }
serde_json = {version= "1", optional = true }
bitvec = { version = "1.0", default-features = false }
bitflags = { version = "2"}
sockcan_binding = { path ="../../sockcan-binding"}
sockcan_data    = { path ="../../sockcan-data" }
dbcapi          = { path ="../../dbcapi" }
lib_sockcan     = { path ="../../../canbus-core-rs/sockcan" }
afbv4           = { path ="../../../afb-librust/afb-librs" }

[build-dependencies]
dbcparser= {path= "../../../canforge-rs/dbcparser"}

[lib]
name = "afb_model3"
crate-type = ["cdylib"]
path = "src/model3-binding.rs"

[features]
default = ["serde","serde_json"]
